--- a/blog.html
+++ b/blog.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <div id="container">
-    <div id="cabecera">
-        Cabecera
+        <div id="cabecera">
+            Cabecera
+            <span id="tagline">tu blog</span>
+        </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
         </div>
-    </div>
+   
     </div>
 
     
