--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,9 @@
         <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
+            <p> los blog son buenos</p>
         </div>
+
     </div>
 
     
