--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
-    <title>Bienvenido a </title>
+    <title>Bienvenido a 2.0</title>
 
    
     <link rel="stylesheet" href="css/estilo.css"> 
